# minmax-code

./: .gitignore  .npmignore  Cargo.toml  README.md  agent.md  arquitectura.md  install-rust.ps1  install-rust.sh  install.ps1  install.sh  package.json  rust-migration-analysis.md  rust-migration-plan.md  tsconfig.json
.github/workflows/: release-rust.yml  release.yml
docs/: CNAME  index.html
minmax-code-rs/: Cargo.toml
minmax-code-rs/src/: lib.rs  main.rs
npm/: README.md  install.js  package.json  run.js
scripts/: build-all.sh  postinstall.js  upload-r2.sh
src/: app.tsx  index.ts  lib.rs  main.rs
src/components/: ApiKeyPrompt.tsx  ChatInterface.tsx  CommandPalette.tsx  ConfigMenu.tsx  FilePicker.tsx  Header.tsx  Input.tsx  Markdown.tsx  Message.tsx  MessageList.tsx  SessionPicker.tsx  StatusBar.tsx  ThinkingIndicator.tsx  ToolOutput.tsx
src/config/: mod.rs  settings.rs  settings.ts  themes.rs
src/core/: api.rs  api.ts  chat.rs  commands.rs  commands.ts  mcp.ts  mod.rs  parser.rs  parser.ts  session.rs  session.ts  tool-meta.ts  tools.ts  update.rs
src/hooks/: useChat.ts  useMode.ts  useMouseScroll.ts  useQuota.ts  useSession.ts
src/tools/: ask_user.rs  bash.rs  bash.ts  edit-file.ts  edit_file.rs  glob.rs  glob.ts  grep.rs  grep.ts  list-dir.ts  list_dir.rs  mod.rs  read-file.ts  todo_write.rs  web-search.ts  web_search.rs  write-file.ts  write_file.rs
src/tui/: agent_question.rs  app.rs  chat_view.rs  file_picker.rs  header.rs  input.rs  layout.rs  markdown.rs  mod.rs  status_bar.rs  todo_panel.rs  tool_view.rs
tests/: smoke_test.sh
(+17 files in other folders)
